fix: wrap position

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -16,7 +16,7 @@
 
 .wrap {
   overflow-x: hidden;
-  position: relative
+  position: relative;
   background-color: #888888;
 }
 
